Compile code in background to report errors

--- a/index.html
+++ b/index.html
@@ -60,13 +60,18 @@
     border-top-right-radius: 5px;
     cursor: default;
     height: 2ex;
+    border-bottom: 1px solid #bbb;
    }
    .module-tabbutton.active {
     border-color: #99d;
     font-weight: bold;
+    border-bottom-color: white !important;
    }
    .module-tabbutton:hover {
     border-color: #cc7;
+   }
+   .module-tabbutton.error {
+    border-color: red;
    }
    #module-tabbar-new {
     float: right;
