Split stylesheet to separate file

--- a/index.html
+++ b/index.html
@@ -6,83 +6,7 @@
   <script src="minigrace.js" async></script>
   <script src="tabs.js" async></script>
   <script src="compiler.js" async></script>
-  <style type="text/css">
-   html, body {
-    margin: 0;
-    padding: 0;
-   }
-   .main-editor {
-       position: relative;
-       width: 45vw;
-       height: 70vh;
-   }
-   #code-area {
-       float: left;
-       width: 45vw;
-   }
-   #output_area {
-       float: left;
-   }
-   #stderr_txt{
-       width: 90vw;
-       font-family: Monospace;
-       height: 20vh;
-   }
-   #stdout_txt {
-       width: 45vw;
-       height: 70vh;
-   }
-   #stdout_options {
-       float: right;
-   }
-   #toolbar {
-    background: #ddd;
-    border-bottom: 1px solid white;
-   }
-   #runbutton {
-    color: green;
-    padding: 0;
-   }
-   #module-tabbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-   }
-   .module-tabbutton {
-    border-width: 2px;
-    float: left;
-    margin-right: 3px;
-    padding: 2px;
-    border-style: solid;
-    border-color: #bbb;
-    border-bottom: none;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    cursor: default;
-    height: 2ex;
-    border-bottom: 1px solid #bbb;
-   }
-   .module-tabbutton.active {
-    border-color: #99d;
-    font-weight: bold;
-    border-bottom-color: white !important;
-   }
-   .module-tabbutton:hover {
-    border-color: #cc7;
-   }
-   .module-tabbutton.error {
-    border-color: red;
-   }
-   #module-tabbar-new {
-    float: right;
-    border-bottom-width: 2px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-   }
-   #module-tabbar-new:hover {
-    background: #eee;
-   }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  <body>
   <div id="toolbar">
