Add titles to buttons

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
  </head>
  <body>
   <div id="toolbar">
-   <button id="runbutton">▶</button>
+   <button id="runbutton" title="Run">▶</button>
   </div>
   <div id="code-area">
    <ul id="module-tabbar">
-    <li id="module-tabbar-new" class="module-tabbutton">
+    <li id="module-tabbar-new" class="module-tabbutton" title="New tab">
      +
     </li>
    </ul>
