--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <script src="minigrace.js" async></script>
   <script src="tabs.js" async></script>
   <script src="compiler.js" async></script>
+  <script src="file.js" async></script>
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  <body>
   <div id="toolbar">
    <button id="runbutton" title="Run">▶</button>
+   <button id="uploadbutton" title="Upload file">&#128228;</button>
   </div>
   <div id="code-area">
    <ul id="module-tabbar">
@@ -31,6 +33,7 @@
     setUpMinigrace();
     $('module-tabbar-new').addEventListener('click', tabNewClickListener);
     $('runbutton').addEventListener('click', run);
+    $('uploadbutton').addEventListener('click', uploadFile);
    });
   </script>
  </body>
