Add download button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div id="toolbar">
    <button id="runbutton" title="Run">▶</button>
    <button id="uploadbutton" title="Upload file">&#128228;</button>
+   <a id="downloadbutton" title="Download file">&#128229;</a>
    <button id="aboutbutton">About</button>
   </div>
   <div id="code-area">
