Make line references and suggestions into links
The standard error output from the compiler will now be processed to
have links jumping to any of the the modules and lines mentioned in the
output, and the "Did you mean:" of suggestions will implement the
suggestion when clicked.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   <div id="output_area">
    <textarea id="stdout_txt"></textarea>
   </div>
-  <textarea id="stderr_txt"></textarea>
+  <div id="stderr_area">
+   <textarea id="stderr_txt"></textarea>
+   <ul id="stderr_list"></ul>
+  </div>
   <script src="ace/ace.js"></script>
   <script src="ace/mode-grace.js" type="text/javascript" charset="utf-8"></script>
   <script>
