Allow examing stack frames from exceptions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="tabs.js" async></script>
   <script src="compiler.js" async></script>
   <script src="file.js" async></script>
+  <script src="debugger.js" async></script>
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  <body>
