Allow undoing close tab

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="compiler.js" async></script>
   <script src="file.js" async></script>
   <script src="debugger.js" async></script>
+  <script src="ui.js" async></script>
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  <body>
@@ -17,6 +18,7 @@
    <a id="downloadbutton" title="Download file">&#128229;</a>
    <button id="aboutbutton">About</button>
   </div>
+  <div id="restore-prompt"></div>
   <div id="code-area">
    <ul id="module-tabbar">
     <li id="module-tabbar-new" class="module-tabbutton" title="New tab">
