Automatically save and restore with local storage

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     $('runbutton').addEventListener('click', run);
     $('uploadbutton').addEventListener('click', uploadFile);
     $('aboutbutton').addEventListener('click', aboutClickListener);
+    restoreLocalStorage();
    });
   </script>
  </body>
