--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <div id="output_area">
    <textarea id="stdout_txt"></textarea>
-   <canvas id="stdcanvas" style="display: none;" id="standard-canvas" width="500" height="500"></canvas>
+   <canvas id="standard-canvas" style="display: none;" width="500" height="500"></canvas>
   </div>
   <div id="output_options">
    <select id="output-select" onchange="outputswitch()">
