Indicate when a module is compiling in the background

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
    <textarea id="stderr_txt"></textarea>
    <ul id="stderr_list"></ul>
   </div>
+  <div id="statusbar">&nbsp;</div>
   <script src="ace/ace.js"></script>
   <script src="ace/mode-grace.js" type="text/javascript" charset="utf-8"></script>
   <script>
