--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
    <textarea id="stdout_txt"></textarea>
    <canvas id="standard-canvas" style="display: none;" width="500" height="500"></canvas>
   </div>
-  <div id="output_options">
+  <div id="statusbar">
    <select id="output-select" onchange="outputswitch()">
     <option value="stdout">Program output
     <option value="canvas">Canvas
-   </select>:
+   </select>
   </div>
   <div id="stderr_area">
    <textarea id="stderr_txt"></textarea>
    <ul id="stderr_list"></ul>
   </div>
-  <div id="statusbar">&nbsp;</div>
   <script src="ace/ace.js"></script>
   <script src="ace/mode-grace.js" type="text/javascript" charset="utf-8"></script>
   <script>
