Add XMLHttpRequest library

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="file.js" async></script>
   <script src="debugger.js" async></script>
   <script src="ui.js" async></script>
+  <script src="xhr.js" async></script>
   <script src="samples.js" async></script>
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
