Clear out stdout area on load

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     restoreLocalStorage();
     if (localStorage.getItem('seen-tour') != "1")
       setTimeout(tour, 500);
+    $('stdout_txt').value = "";
    });
   </script>
  </body>
